<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/home_link_title"
        android:textColor="@color/grayBlack"
        android:textSize="@dimen/title_text2"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:columnCount="4"
        android:rowCount="2">

        <TextView
            android:id="@+id/home_fun_mileage"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_mileage_title"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/home_fun_mileage_22dp" />

        <TextView
            android:id="@+id/home_fun_chapel"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_chapel_title"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/home_fun_chapel_22dp" />

        <TextView
            android:id="@+id/home_fun_notice"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_notice_title"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/home_fun_notice_22dp" />

        <TextView
            android:id="@+id/home_fun_book"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_book_title"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/home_fun_book_22dp" />

        <TextView
            android:id="@+id/home_fun_bible"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_bible_title"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/home_fun_bible_22dp" />

        <TextView
            android:id="@+id/home_fun_coalition"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_coalition_title"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/home_fun_coalition_22dp" />

        <TextView
            android:id="@+id/home_fun_schedule"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_scheadule_title"
            app:drawableTopCompat="@drawable/home_fun_schedule_22dp" />

        <TextView
            android:id="@+id/home_fun_reading"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/home_fun_reading_title"
            android:textStyle="normal"
            app:drawableTopCompat="@drawable/home_fun_reading_22dp" />
    </GridLayout>

</LinearLayout>