<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handlerShortcut"
            type="com.space.core_ui.util.ParamsItemHandler" />

        <import type="com.space.navigator.UiNavigator" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_link_title"
            android:textColor="@color/grayBlack"
            android:textSize="@dimen/title_text2"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:columnCount="4"
            android:rowCount="2">

            <TextView
                android:id="@+id/mileage"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:maxWidth="90dp"
                android:maxHeight="55dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.JOB_INFO)}"
                android:text="취업정보"
                android:textStyle="normal"
                app:drawableTopCompat="@drawable/home_fun_job" />

            <TextView
                android:id="@+id/chapel"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="90dp"
                android:maxHeight="55dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.CHAPEL)}"
                android:text="@string/home_fun_chapel_title"
                android:textStyle="normal"
                app:drawableTopCompat="@drawable/home_fun_chapel_22dp" />

            <TextView
                android:id="@+id/notice"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="90dp"
                android:maxHeight="55dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.NOTICE)}"
                android:text="@string/home_fun_notice_title"
                android:textStyle="normal"
                app:drawableTopCompat="@drawable/home_fun_notice_22dp" />

            <TextView
                android:id="@+id/book"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="90dp"
                android:maxHeight="55dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.BOOK)}"
                android:text="@string/home_fun_book_title"
                android:textStyle="normal"
                app:drawableTopCompat="@drawable/home_fun_book_22dp" />

            <TextView
                android:id="@+id/bible"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="90dp"
                android:maxHeight="55dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.BIBLE_JOB_INFO)}"
                android:text="사역채용공고"
                android:textStyle="normal"
                app:drawableTopCompat="@drawable/home_fun_job_bible" />

            <TextView
                android:id="@+id/partners"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="90dp"
                android:maxHeight="55dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.PARTNERS)}"
                android:text="@string/home_fun_coalition_title"
                android:textStyle="normal"
                app:drawableTopCompat="@drawable/home_fun_coalition_22dp" />

            <TextView
                android:id="@+id/schedule"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="90dp"
                android:maxHeight="57dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.TIMETABLE)}"
                android:text="시간표"
                app:drawableTopCompat="@drawable/home_fun_schedule_22dp" />

            <TextView
                android:id="@+id/rothem"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:maxWidth="90dp"
                android:maxHeight="55dp"
                android:onClick="@{() -> handlerShortcut.onClick(UiNavigator.ROTHEM)}"
                android:text="@string/home_fun_rothem_title"
                android:textStyle="normal"
                app:drawableTopCompat="@drawable/home_fun_rothem" />
        </GridLayout>

    </LinearLayout>
</layout>
